test/positive/feature_array_return.java

public class feature_array_return {
  public feature_array_return() {}
  public int[] foo() { return null; }
}

