test/negative/arrayparametersuffix.java
public class X {
    public void f(int x[]) {
    }
}
